return certs in details api. add family ids parm to quicksearch
